# tap-aws-cost-explorer

./: LICENSE  README.md  meltano.yml  pyproject.toml  tap-aws-cost-explorer.sh  tox.ini
.github/workflows/: codeql-analysis.yml
tap_aws_cost_explorer/: client.py  streams.py  tap.py
tap_aws_cost_explorer/tests/: __init__.py  test_core.py
