[tool.poetry]
name = "tap-aws-cost-explorer"
version = "0.0.1"
description = "`tap-aws-cost-explorer` is a Singer tap for AWSCostExplorer, built with the Meltano SDK for Singer Taps."
authors = ["Albert Marrero"]
keywords = [
    "ELT",
    "AWSCostExplorer",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.11"
boto3 = "^1.18.63"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-aws-cost-explorer = 'tap_aws_cost_explorer.tap:TapAWSCostExplorer.cli'
